<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chatbot">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/editText">

            <LinearLayout
                android:id="@+id/ConvoLayout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/transcript"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sample_text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/response"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/message"
                    android:textAlignment="viewEnd"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp" />

            </LinearLayout>


        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/enter_message"
                android:inputType="text"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

            <Button
                android:id="@+id/sendBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_btn_dark"
                android:text="@string/send"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textColor="@color/colorAccentDark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
