<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/interviewme_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/tipBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/interview_tips_and_tricks"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="normal"/>


        <Button
            android:id="@+id/chatBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/interview_chat"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipBtn" />

        <Button
            android:id="@+id/codingBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/coding_questions_and_answers"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/alexaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_btn"
            android:text="@string/alexa_skill"
            android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>